# journal-officiel

./: .gitignore  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml
Dynamodb/: journal-officiel.json  main.py  pyproject.toml
backend/: core.py  main.py  poetry.toml  pyproject.toml
backend/journal-officiel-scrapper/: Makefile  README.md  samconfig.toml  template.yaml
backend/journal-officiel-scrapper/src/: Dockerfile  core.py  main.py  pyproject.toml  requirements.txt
docs/: architecture.drawio
infrastructure/: application_insights.tf  dynamodb.tf  eventbridge.tf  glue.tf  lambda.tf  locals.tf  resource_groups.tf  s3_bucket.tf  terraform.tf
infrastructure/policies/: s3_journal_officiel_datalake.json
localstack/: docker-compose.yml
localstack/vault/config/: vault.hcl
