[tool.poetry]
name = "journal-officiel"
version = "0.1.0"
description = ""
authors = ["Axel Chauvet <chauvetaxel@free.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.4"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
botocore = "^1.34.130"
boto3 = "^1.34.130"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
