[tool.poetry]
name = "journal-officiel"
version = "0.1.0"
description = ""
authors = [
    "Axel Chauvet <chauvetaxel@free.fr>",
    "Jeremy Chauvet <jeremy@captaincy.io>"
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
